kubernetes/config/dashboard-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: liqo-dashboard
  name: liqo-dashboard
  namespace: liqo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liqo-dashboard
  template:
    metadata:
      labels:
        app: liqo-dashboard
    spec:
      volumes:
        - name: shared-data
          emptyDir: { }
      containers:
        - image: liqo/dashboard:latest
          volumeMounts:
            - name: shared-data
              mountPath: /etc/nginx/ssl/
          imagePullPolicy: Always
          name: liqo-dashboard
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
