kubernetes/config/dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: liqo-dashboard
  name: liqo-dashboard
  namespace: liqo
spec:
  type: NodePort
  selector:
    app: liqo-dashboard
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
