kubernetes/config/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: liqo-dashboard
  name: liqo-dashboard-content
  namespace: liqo
spec:
  rules:
    - host: example.liqodashboard.com
      http:
        paths:
          - backend:
              serviceName: liqo-dashboard
              servicePort: 443
            path: /
  tls:
    - hosts:
        - example.liqodashboard.com
      secretName: liqo-dashboard-certificate
